src/test/resources/wacc_examples/invalid/semanticErr/imports/importedFunctionAlreadyDeclared.wacc
# tries to import a file which has already defined a function foo

# Output:
# Semantic error

# Program:

begin
    include "importFiles/fileWithFooFunction.wacc"
	int foo() is
		return 0
	end
	skip
end